--- a/MyApp/src/app/perfil-admi/perfil-admi.component.html
+++ b/MyApp/src/app/perfil-admi/perfil-admi.component.html
@@ -45,6 +45,12 @@
                 </button>
                 Crear retos
             </div>
+            <div class="opcion5">
+                <button mat-mini-fab color="accent" aria-label="Example icon button with a delete icon" [routerLink]="['/crearRecompensa']">
+                    <mat-icon>add</mat-icon>
+                </button>
+                Crear recompensas
+            </div>
             
             <button mat-raised-button color="accent"></button>
         </div>
