--- a/MyApp/src/app/publicacion/publicacion.component.html
+++ b/MyApp/src/app/publicacion/publicacion.component.html
@@ -12,8 +12,25 @@
                   <div [innerHtml]="post.descripcion"></div>
                 </mat-card-content>
                 <mat-card-actions>
-                  <button mat-raised-button color="accent">LIKE</button>
-                  <button mat-raised-button color="primary">SHARE</button>
+                  <form>
+                    <div class="puntuacion">
+                      <p class="clasificacion">
+                        <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                        --><label for="radio1">★</label><!--
+                        --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                        --><label for="radio2">★</label><!--
+                        --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                        --><label for="radio3">★</label><!--
+                        --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                        --><label for="radio4">★</label><!--
+                        --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                        --><label for="radio5">★</label>
+                      </p>
+                    </div>
+                  </form>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Eliminar</button>
+                <button mat-raised-button color="primary">Editar</button>
+                <button mat-raised-button color="primary">Reclamar recompensa</button>
                 </mat-card-actions>
             </mat-card>
             <br>
