Enrutamiento administrador/usuario: Categorias y publicaciones.

--- a/MyApp/src/app/crear-recompensa/crear-recompensa.component.html
+++ b/MyApp/src/app/crear-recompensa/crear-recompensa.component.html
@@ -7,8 +7,8 @@
         <br>
         <div class="recompensa">
             <mat-form-field class="example-full-width">
-            <mat-label>Nombre de la recompensa</mat-label>
-            <input matInput [(ngModel)]="nuevaRecompensa.nombre">
+            <mat-label>Titulo de la recompensa</mat-label>
+            <input matInput [(ngModel)]="nuevaRecompensa.titulo">
             </mat-form-field>
             <br>
             <br>
