--- a/MyApp/src/app/categoria-admi/categoria-admi.component.html
+++ b/MyApp/src/app/categoria-admi/categoria-admi.component.html
@@ -4,6 +4,8 @@
             <div class="tarjeta">
                 <h3>{{categoria.nombre}}</h3>
                 <div [innerHtml]="categoria.descripcion"></div>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" (click)="eliminarCategoria()" [routerLink]="['/perfilAdmi']">Eliminar</button>
+                <button mat-raised-button color="primary">Editar</button>
             </div>
         </div>
     </div>
