--- a/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
+++ b/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
@@ -1,5 +1,5 @@
 <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-    <mat-toolbar color="primary" class="example-toolbar">
+    <mat-toolbar color="accent" class="example-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <h1 class="example-app-name"><mat-icon aria-hidden="false" aria-label="Example home icon">group</mat-icon>Socigence App</h1>
     </mat-toolbar>
@@ -9,8 +9,8 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-            <a mat-list-item routerLink="/publicaciones"> <mat-icon aria-hidden="false" aria-label="Example home icon">public</mat-icon> Ver publicaciones</a>
-            <a mat-list-item routerLink="/categorias"> <span class="material-icons">spa</span> Ver categorias </a>
+            <a mat-list-item routerLink="/publicacionesAdmi"> <mat-icon aria-hidden="false" aria-label="Example home icon">public</mat-icon> Ver publicaciones</a>
+            <a mat-list-item routerLink="/categoriasAdmi"> <span class="material-icons">spa</span> Ver categorias </a>
             <a mat-list-item routerLink="/retos"> <span class="material-icons">whatshot</span> Ver retos </a>
             <a mat-list-item routerLink="/recompensas"> <span class="material-icons">grade</span> Ver recompensas </a>
             <a mat-list-item routerLink="/perfilAdmi"> <span class="material-icons">person</span> Perfil </a>
