--- a/MyApp/src/app/publicacion-admi/publicacion-admi.component.css
+++ b/MyApp/src/app/publicacion-admi/publicacion-admi.component.css
@@ -11,7 +11,7 @@
     max-width: 90%;
     margin-left: auto;
     margin-right: auto;
-    border: #2E86C1 solid 1px;
+    border: #E91E63 solid 1px;
 }
 
   
