--- a/MyApp/src/app/publicacion-admi/publicacion-admi.component.html
+++ b/MyApp/src/app/publicacion-admi/publicacion-admi.component.html
@@ -28,6 +28,7 @@
                       </p>
                     </div>
                   </form>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Eliminar</button>
                 <button mat-raised-button color="primary" [routerLink]="['/editarPost']" (click)="editar(post)">Editar</button>
                 <button mat-raised-button color="primary">Reclamar recompensa</button>
                 </mat-card-actions>
@@ -35,4 +36,5 @@
             <br>
         </div>
     </div>
+
 
