--- a/MyApp/src/app/recompensa/recompensa.component.html
+++ b/MyApp/src/app/recompensa/recompensa.component.html
@@ -2,7 +2,7 @@
     <div class="general">
         <div class="contenido">
             <div class="tarjeta">
-                <h3>{{recompensa.nombre}}</h3>
+                <h3>{{recompensa.titulo}}</h3>
                 <div [innerHtml]="recompensa.descripcion"></div>
                 <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Eliminar</button>
                 <button mat-raised-button color="primary">Editar</button>
