--- a/MyApp/src/app/reto/reto.component.css
+++ b/MyApp/src/app/reto/reto.component.css
@@ -8,7 +8,7 @@
 }
 
 .tarjeta{
-    border: solid blue 2px;
+    border: solid #AB47BC 2px;
     width: 70%;
     margin-left: auto;
     margin-right: auto;
