Editar retos, otros ajustes

--- a/MyApp/src/app/crear-categoria/crear-categoria.component.html
+++ b/MyApp/src/app/crear-categoria/crear-categoria.component.html
@@ -17,7 +17,7 @@
             </div>
             <br>
             <br>
-            <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Atrás</button>
+            <button mat-raised-button color="primary" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Atrás</button>
             <button mat-raised-button color="accent" [routerLink]="['/perfilAdmi']" (click)="crearCategoria()">Crear</button>
             
 
