--- a/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
+++ b/MyApp/src/app/menu-desplegable-admi/menu-desplegable-admi.component.html
@@ -11,7 +11,7 @@
         <mat-nav-list>
             <a mat-list-item routerLink="/publicacionesAdmi"> <mat-icon aria-hidden="false" aria-label="Example home icon">public</mat-icon> Ver publicaciones</a>
             <a mat-list-item routerLink="/categoriasAdmi"> <span class="material-icons">spa</span> Ver categorias </a>
-            <a mat-list-item routerLink="/retos"> <span class="material-icons">whatshot</span> Ver retos </a>
+            <a mat-list-item routerLink="/retosAdmi"> <span class="material-icons">whatshot</span> Ver retos </a>
             <a mat-list-item routerLink="/recompensas"> <span class="material-icons">grade</span> Ver recompensas </a>
             <a mat-list-item routerLink="/perfilAdmi"> <span class="material-icons">person</span> Perfil </a>
             <a mat-list-item routerLink="/home"> <span class="material-icons">home</span> Cerrar sesión </a>
