--- a/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.html
+++ b/MyApp/src/app/ver-publicaciones/ver-publicaciones.component.html
@@ -9,7 +9,7 @@
           <app-publicacion [post]="post"></app-publicacion>
         </div>
         <div class="boton">
-            <button mat-raised-button color="primary" [routerLink]="['/perfilAdmi']">Atrás</button>
+            <button mat-raised-button color="primary" [routerLink]="['/perfil']">Atrás</button>
         </div>
     </div>
 </app-menu-desplegable>
