--- a/MyApp/src/app/ver-retos-admi/ver-retos-admi.component.css
+++ b/MyApp/src/app/ver-retos-admi/ver-retos-admi.component.css
@@ -9,8 +9,8 @@
 
 h1{
     font-family: fantasy;
-    font-size: 40px;
-    color: #1ABC9C;
+    font-size: 50px;
+    color: #1976D2;
     text-align: center;
     margin-top: 3%;
 }
