--- a/MyApp/src/app/ver-retos/ver-retos.component.css
+++ b/MyApp/src/app/ver-retos/ver-retos.component.css
@@ -10,7 +10,7 @@
 h1{
     font-family: fantasy;
     font-size: 50px;
-    color: #1976D2;
+    color: #EC407A;
     text-align: center;
     margin-top: 3%;
 }
