--- a/MyApp/src/app/crear-categoria/crear-categoria.component.css
+++ b/MyApp/src/app/crear-categoria/crear-categoria.component.css
@@ -25,7 +25,7 @@ h1{
     margin-right: auto;
     margin-top: 1%;
     margin-bottom: 1%;
-    border:#2E86C1 1px solid;
+    border:#AB47BC 1px solid;
 }
 
 @media only screen and (max-width: 840px){
@@ -47,6 +47,6 @@ h1{
         margin-right: auto;
         margin-top: 1%;
         margin-bottom: 1%;
-        border:#3D60B6 2px solid;
+        border:#AB47BC 1px solid;
     }
 }
