--- a/MyApp/src/app/crear-retos/crear-retos.component.css
+++ b/MyApp/src/app/crear-retos/crear-retos.component.css
@@ -27,7 +27,7 @@ h1{
     margin-right: auto;
     margin-top: 1%;
     margin-bottom: 1%;
-    border:#2E86C1 1px solid;
+    border:#AB47BC 1px solid;
 }
 
 
@@ -50,6 +50,6 @@ h1{
         margin-right: auto;
         margin-top: 1%;
         margin-bottom: 1%;
-        border:#3D60B6 2px solid;
+        border:#AB47BC 1px solid;
     }
 }
