--- a/MyApp/src/app/editar-reto/editar-reto.component.css
+++ b/MyApp/src/app/editar-reto/editar-reto.component.css
@@ -15,7 +15,7 @@ h1{
     margin-top: 2%;
 }
 
-.recompensa{
+.reto{
     text-align: center;
 }
 
@@ -25,7 +25,7 @@ h1{
     margin-right: auto;
     margin-top: 1%;
     margin-bottom: 1%;
-    border:#AB47BC 1px solid;
+    border:#AB47BC  1px solid;
 }
 
 @media only screen and (max-width: 840px){
@@ -47,6 +47,6 @@ h1{
         margin-right: auto;
         margin-top: 1%;
         margin-bottom: 1%;
-        border:#AB47BC 1px solid;
+        border:#AB47BC  2px solid;
     }
 }
