--- a/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
+++ b/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
@@ -9,11 +9,13 @@
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list>
-            <a mat-list-item routerLink="/home"> <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon> Home</a>
-            <a mat-list-item routerLink="/retos"> <span class="material-icons">mood</span> Ver retos </a>
-            <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Realizar publicación </a>
             <a mat-list-item routerLink="/publicaciones"> <span class="material-icons">search</span> Ver publicaciones </a>
-            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> Reclamar premio </a>
+            <a mat-list-item routerLink="/categorias"> <span class="material-icons">spa</span> Ver categorias </a>
+            <a mat-list-item routerLink="/retos"> <span class="material-icons">whatshot</span> Ver retos </a>
+            <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Realizar publicación </a>
+            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> Ver recompensas </a>
+            <a mat-list-item routerLink="/perfil"> <span class="material-icons">person</span> Perfil </a>
+            <a mat-list-item routerLink="/home"> <span class="material-icons">home</span> Cerrar sesión </a>
             
         </mat-nav-list>
       </mat-sidenav>
