--- a/MyApp/src/app/reto-admi/reto-admi.component.css
+++ b/MyApp/src/app/reto-admi/reto-admi.component.css
@@ -7,7 +7,6 @@
     height: 100%;
 }
 
-
 .tarjeta{
     border: solid #AB47BC 2px;
     width: 70%;
@@ -16,20 +15,14 @@
     padding: 10px;
     text-align: center;
     border-radius: 5px;
-    margin-top: 3%;
+    margin-bottom: 3%;
 
 }
 
 h3{
     font-family: fantasy;
     font-size: 25px;
-    color: #1976D2;
-}
-
-h4{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    color: #A569BD;
+    color: #1ABC9C;
 }
   
 
