--- a/MyApp/src/app/reto-admi/reto-admi.component.html
+++ b/MyApp/src/app/reto-admi/reto-admi.component.html
@@ -5,6 +5,8 @@
                 <h3>{{reto.titulo}}</h3>
                 <p><b>Categoría: </b>{{reto.categoria.nombre}}</p>
                 <div [innerHtml]="reto.descripcion"></div>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" (click)="eliminarReto()" [routerLink]="['/perfilAdmi']">Eliminar</button>
+                <button mat-raised-button color="primary" [routerLink]="['/editarReto']" (click)="editar(reto)">Editar</button>
             </div>
         </div>
     </div>
