Recompensas y ultimos detalles hechos.

--- a/MyApp/src/app/editar-reto/editar-reto.component.html
+++ b/MyApp/src/app/editar-reto/editar-reto.component.html
@@ -22,7 +22,7 @@
             <p-editor [(ngModel)]="currentReto.descripcion" [style]="{'height':'150px'}"></p-editor>
             </div>
             <br>
-            <button mat-raised-button color="primary" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Atrás</button>
+            <button mat-raised-button color="primary" [style]="{'margin':'10px'}" [routerLink]="['/retosAdmi']">Atrás</button>
             <button mat-raised-button color="accent" [routerLink]="['/perfilAdmi']" (click)="editarReto()">Actualizar</button>
 
         </div>
