--- a/MyApp/src/app/login/login.component.html
+++ b/MyApp/src/app/login/login.component.html
@@ -21,7 +21,7 @@
             </button>
         </mat-form-field>
         <br>
-        <button mat-raised-button color="accent" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
+        <button mat-raised-button color="primary" style="margin: 5px;" [routerLink]="['/home']">Atrás</button>
         <button mat-raised-button color="accent" [routerLink]="link" (click)="loguear()">Iniciar sesión</button>
     </div>
     <br>
