--- a/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
+++ b/MyApp/src/app/menu-desplegable/menu-desplegable.component.html
@@ -13,7 +13,7 @@
             <a mat-list-item routerLink="/categorias"> <span class="material-icons">spa</span> Ver categorias </a>
             <a mat-list-item routerLink="/retos"> <span class="material-icons">whatshot</span> Ver retos </a>
             <a mat-list-item routerLink="/crearPublicacion"> <span class="material-icons">border_color</span> Realizar publicación </a>
-            <a mat-list-item routerLink="/home"> <span class="material-icons">grade</span> Ver recompensas </a>
+            <a mat-list-item routerLink="/recompensas"> <span class="material-icons">grade</span> Ver recompensas </a>
             <a mat-list-item routerLink="/perfil"> <span class="material-icons">person</span> Perfil </a>
             <a mat-list-item routerLink="/home"> <span class="material-icons">home</span> Cerrar sesión </a>
             
