--- a/MyApp/src/app/ver-recompensas-admi/ver-recompensas-admi.component.css
+++ b/MyApp/src/app/ver-recompensas-admi/ver-recompensas-admi.component.css
@@ -10,11 +10,7 @@
 h1{
     font-family: fantasy;
     font-size: 50px;
-    color: #EC407A;
+    color: #1976D2;
     text-align: center;
     margin-top: 3%;
-}
-
-.boton{
-    text-align: center;
 }
