--- a/MyApp/src/app/recompensa-admi/recompensa-admi.component.html
+++ b/MyApp/src/app/recompensa-admi/recompensa-admi.component.html
@@ -4,6 +4,8 @@
             <div class="tarjeta">
                 <h3>{{recompensa.titulo}}</h3>
                 <div [innerHtml]="recompensa.descripcion"></div>
+                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']">Eliminar</button>
+                <button mat-raised-button color="primary">Editar</button>
             </div>
         </div>
     </div>
