--- a/MyApp/src/app/ver-recompensas-admi/ver-recompensas-admi.component.html
+++ b/MyApp/src/app/ver-recompensas-admi/ver-recompensas-admi.component.html
@@ -1,16 +1,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<app-menu-desplegable>
+<app-menu-desplegable-admi>
     <div class="general">
         <div class="titulo">
             <h1>Recompensas</h1>
         </div>
         <br>
         <div *ngFor= 'let recompensa of recompensas'>
-          <app-recompensa [recompensa]="recompensa"></app-recompensa>
-        </div>
-        <div class="boton">
-            <button mat-raised-button color="primary" [routerLink]="['/perfil']">Atrás</button>
+          <app-recompensa-admi [recompensa]="recompensa"></app-recompensa-admi>
         </div>
     </div>
-</app-menu-desplegable>
-
+</app-menu-desplegable-admi>
