Modulo analisis de algoritmos completado

--- a/MyApp/src/app/editar-usuarios/editar-usuarios.component.html
+++ b/MyApp/src/app/editar-usuarios/editar-usuarios.component.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <button mat-raised-button color="primary" style="margin: 5px;" [routerLink]="['/usuarios']">Atrás</button>
-        <button mat-raised-button color="accent" [routerLink]="['/perfilAdmi']" (click)="editarUsuario()">Actualizar</button>
+        <button mat-raised-button color="warn" [routerLink]="['/perfilAdmi']" (click)="editarUsuario()">Actualizar</button>
     </div>
 </div>
 
