--- a/MyApp/src/app/solucion/solucion.component.html
+++ b/MyApp/src/app/solucion/solucion.component.html
@@ -13,12 +13,13 @@
                 </mat-card-content>
                 <mat-card-actions>
                 <br>
-                <button mat-raised-button color="accent" [style]="{'margin':'10px'}" [routerLink]="['/perfilAdmi']" (click)="eliminarPost()">Eliminar</button>
-                <button mat-raised-button color="primary" [routerLink]="['/editarPost']" (click)="editar(post)">Editar</button>
+                <button mat-raised-button color="warn" [style]="{'margin':'10px'}" [routerLink]="['/perfilAnalisis']" (click)="eliminarPost()">Eliminar</button>
+                <button mat-raised-button color="primary" [routerLink]="['/editarSolucion']" (click)="editar(post)">Editar</button>
                 </mat-card-actions>
             </mat-card>
             <br>
         </div>
     </div>
+
 
 
